# general_packages

./: .gitignore  LICENSE
.github/workflows/: index.yaml  package.yaml  updateDbFromSdk.yaml
images/: manifest.json
language_packs/de_DE/: necto_de.qm  necto_de.ts
language_packs/es_ES/: necto_es.qm  necto_es.ts
language_packs/it_IT/: manifest.json
language_packs/nl_NL/: manifest.json
language_packs/pt_PT/: necto_pt.qm  necto_pt.ts
language_packs/sr_RS/: necto_sr.qm  necto_sr.ts
language_packs/tr_TR/: manifest.json
language_packs/zh_CN/: necto_zh_CN.qm  necto_zh_CN.ts
necto-translations/de/: manifest.json
necto-translations/es/: manifest.json
necto-translations/pt/: manifest.json
necto-translations/zh_CN/: manifest.json
scripts/: index.py  package.py  support.py  trigger_necto_assistant_auto_translation.py
scripts/requirements/: index.txt  package.txt
templates/necto/dev/file_templates/: manifest.json
templates/necto/dev/interrupt_assistant_templates/: manifest.json
templates/necto/dev/lvgl_designer_generated_code/: manifest.json
templates/necto/dev/toolchain_templates/: manifest.json
templates/necto/experimental/designer_generated_code/: manifest.json
utils/cmake/: manifest.json  mikroeUtilsCommon.cmake
utils/cmake/include/: mikroe_bootloader_gnu.h
utils/preinit/: CMakeLists.txt  manifest.json
utils/preinit/cmake/: preinit.h.in  preinitUtils.cmake
utils/preinit/src/: preinit.c
utils/unit_test_lib/: CMakeLists.txt  manifest.json
utils/unit_test_lib/src/: unit_test_api.c
(+25 files in other folders)
